Image produit macbook pro

--- a/vente.css
+++ b/vente.css
@@ -54,9 +54,16 @@ body{
 }
 
 .produit{
-	width:500px;
+	width:700px;
 	position: absolute;
 	top: 180px;
 	left: 270px;
+}
+
+.produit img{
+	float: left;
+	width: 350px;
+	height: 300px;
+	margin: 15px 80px 15px 0px;
 }
 
