--- a/vente.scss
+++ b/vente.scss
@@ -55,12 +55,11 @@ $goutiere:15px;
 	position: absolute;
 	top: 180px;
 	left: 220px;
-}
 
-.produit img{
+	img{
 	float: left;
 	width: 350px;
 	height: 300px;
 	margin: $goutiere 80px $goutiere 0px;
 }
-
+}
