--- a/ecommerce/vente.scss
+++ b/ecommerce/vente.scss
@@ -2,6 +2,7 @@ $goutiere: 15px;
 $hauteur-pub: 180px;
 $largeur-pub: 1000px;
 
+
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
      -moz-border-radius: $radius;
@@ -10,45 +11,34 @@ $largeur-pub: 1000px;
           border-radius: $radius;
 }
 
+h1{
+	color: #EE5555;
+	margin: 30px 0px 20px 400px;
+	display: inline-block;
+}
+
 
 body{
 	width: 1000px;
 	height: 600px;
 	margin: 0;
 }
-.pub{
-	width: $largeur-pub;
-	height: $hauteur-pub;
-	overflow: hidden;
-	position: relative;
 
-	img{
-		width: $largeur-pub  - 2 * $goutiere;
-		height: $hauteur-pub - 2 * $goutiere;
-		text-align: center;
-		margin: $goutiere 50px $goutiere 50px;
-		display: inline-block;
-	}
-	a{
-		position: absolute;
-		right: $goutiere * 2;
-		bottom: $goutiere * 2;
-	}
-}
 
 .menu{
-	margin-top: 2px;
+	margin-top: 200px;
 	padding: $goutiere $goutiere $goutiere $goutiere;
 	width: 150px;
 	@include border-radius(5px);
-}
+	border: inset #cc9922;
 
-$decalage-haut-ariane: $goutiere + $hauteur-pub; 
+}
+ 
 
 .fildariane{
 	width: 700px;
 	position: absolute;
-	top: $decalage-haut-ariane;
+	top: 150px;
 	left: 220px;
 	@include border-radius(5px);
 
@@ -81,5 +71,6 @@ $decalage-haut-ariane: $goutiere + $hauteur-pub;
 		width: 350px;
 		height: 300px;
 		margin: $goutiere 80px $goutiere 0px;
+		background-color: blue;
 	}
 }
